# unifmu

./: .gitignore  CITATION.cff  Cargo.toml  Dockerfile  LICENSE.txt  README.md  a.out  build.py  macos_build.sh  macos_setup.sh  setup.py  test_local.ps1  test_local.sh
.cargo/: config.toml
.github/workflows/: pythonapp.yml
MyFMU/resources/: launch.py  launch.toml
assets/common/: endpoint.toml
assets/common/compilation_resources/: unifmu_pyinstaller_build_script.bat
assets/common/fmi2/: backend_remote_FMU.py  modelDescription.xml
assets/common/fmi3/: backend_remote_FMU.py  modelDescription.xml
assets/csharp/: .gitignore  README.md  backend.cs  backend_body.cs  backend_local_head.cs  backend_private.cs  backend_proxy.cs  backend_remote_head.cs  launch.toml  model.cs  model.csproj
assets/csharp/fmi2/: backend.cs  backend_body.cs  model.cs
assets/csharp/fmi3/: backend.cs  backend_body.cs  backend_private.cs  model.cs
assets/docker/: Dockerfile_csharp  README.md  deploy_csharp.py  deploy_python.py  launch_csharp.toml
assets/java/: .gitignore  README.md  build.gradle  launch.toml  settings.gradle.bak
assets/matlab/: README.md  matlab_proxy.py
assets/matlab/matlabcode/: cancel_step.m  do_step.m  enter_initialization_mode.m  get_boolean.m  get_directional_derivative.m  get_real.m  instantiate.m  serialize.m  set_debug_logging.m  set_real.m  set_string.m  setup_experiment.m
assets/proxy/: README.md  launch.toml
assets/python/: README.md  backend.py  launch.toml  main_blackbox.py  main_remote.py  model.py  requirements.txt
assets/python/compilation_resources/: launch_with_pyinstaller.toml  unifmu_pyinstaller_build_script.bat  unifmu_pyinstaller_build_script.sh
assets/python/fmi2/: README.md  abstract_backend.py  backend.py  backend_proxy.py  backend_remote.py  blackbox_backend.py  main_local.py  model.py
assets/python/fmi3/: README.md  abstract_backend.py  backend.py  backend_proxy.py  (+3 more)
cli/: Cargo.toml
cli/assets/csharp/: README.md  backend.cs  model.csproj
cli/assets/docker/: Dockerfile_java  Dockerfile_matlab  Dockerfile_python  compose_csharp.yml  docker-compose.yml  docker-compose_csharp.yml  docker-compose_python.yml  launch.toml  launch_python.toml
cli/assets/java/: .gitignore  build.ps1  pom.xml
cli/assets/java/src/main/java/fmu/: Fmi2.java
cli/assets/matlab/: README.md
cli/assets/matlab/matlabcode/: get_string.m
cli/assets/python/: backend.py
cli/src/: benchmark.rs  lib.rs  main.rs  utils.rs  validation.rs
cli/tests/: cli_tests.rs  cli_tests_fmi2.rs  cli_tests_fmi3.rs  cli_tests_old.rs  fmu_tests.py  new_cli_tests.rs  test_fmi2.py
cli/tests/common/: mod.rs
cli/tests/python_tests/: common.py  fmi3_old.py  fmu_tests.py  test_fmi3.py
cli/tests/test_scripts/: test_fmi2.py  test_fmi3.py
common/: Cargo.toml
common/src/: fmi2_md.rs  fmi3_md.rs  lib.rs  md.rs
docker-build/: Dockerfile  build_all.sh  build_macos.sh  build_windows.sh
docs/: conf.py  index.rst  notes.md
docs/_static/: FMI2 Functions.xmind
figures/: how_it_works.drawio  unifmu_distributed.drawio
fmi2api/: Cargo.toml  build.rs
fmi2api/src/: dispatcher.rs  fmi2.rs  fmi3.rs  fmi_proto.rs  lib.rs  md.rs  socket_dispatcher.rs
fmi2api/tests/: md.rs  req.py
fmiapi/: .gitignore  Cargo.toml  build.rs
fmiapi/src/: category_filter.rs  config.rs  dispatcher.rs  fmi2.rs  fmi2_dispatcher.rs  fmi2_logger.rs  fmi2_messages.rs  fmi2_slave.rs  fmi2_types.rs  fmi3.rs  fmi3_dispatcher.rs  fmi3_logger.rs  fmi3_messages.rs  fmi3_slave.rs  fmi3_types.rs  fmi_proto.rs  lib.rs  logger.rs  logging.rs  protobuf_extensions.rs  spawn.rs  string_conversion.rs
fmiapi/src/common/: logger.rs  mod.rs  protobuf_extensions.rs  string_conversion.rs
fmiapi/src/common/dispatcher/: backend_socket.rs  backend_subprocess.rs  mod.rs
fmiapi/src/common/logger/: category_filter.rs  log_category.rs  log_status.rs  mod.rs
fmiapi/src/common/spawn/: launch_config.rs  mod.rs
fmiapi/src/fmi2/: fmi2_logger.rs  fmi2_slave.rs  fmi2_types.rs  mod.rs
fmiapi/src/fmi3/: fmi3_logger.rs  fmi3_slave.rs  fmi3_types.rs  mod.rs
gui/: gui.py  main.py
integration-tests/: Cargo.toml
integration-tests/tests/: integration_tests.rs
schemas/: fmi2_messages.proto  fmi3_messages.proto  unifmu_fmi.proto  unifmu_fmi2.fbs  unifmu_fmi2.proto  unifmu_handshake.proto
schemas/fmi2/: unifmu_fmi.proto
schemas/fmi3/: unifmu_fmi.proto
src/: config.rs  fmi2.rs  lib.rs  main.rs
test_dependencies/vdmcheck-1.1.3/: VDMCheck2.sh  null
test_dependencies/vdmcheck2-1.1.3/: FMI2Rules.html  null
test_dependencies/vdmcheck3-1.1.3/: FMI3Rules.html  LICENCE  MIT-LICENCE  VDMCheck3.sh  null
tests/: examples.rs
tests/c_tests/: CMakeLists.txt  fmi2FunctionTypes.h  tests.c
tool/unifmu/: authoring.py  cli.py  fmi2.py  generate.py  gui.py
unifmu/: fmi2.py
unifmu_macros/: Cargo.toml
unifmu_macros/src/: lib.rs
wrapper/: .gitignore  Cargo.toml  build.rs
wrapper/benches/: serialization.rs  sockets.rs
wrapper/cli/: Cargo.toml
wrapper/cli/assets/csharp/: .gitignore  backend.cs  launch.toml
wrapper/cli/assets/csharp/schemas/: UnifmuFmi2.cs
wrapper/cli/assets/docker/: Dockerfile_csharp  README.md  launch.toml
wrapper/cli/assets/java/: launch.toml
wrapper/cli/assets/java/src/main/java/fmu/: Adder.java
wrapper/cli/assets/matlab/matlabcode/: reset.m
wrapper/cli/assets/python/: README.md  backend.py
wrapper/cli/src/: main.rs
wrapper/common/: Cargo.toml
wrapper/common/src/: lib.rs
wrapper/fmi2api/: Cargo.toml
wrapper/fmi2api/src/: config.rs  lib.rs  md.rs
wrapper/fmi2api/tests/: config.rs  launch.toml
wrapper/rpc/: Cargo.toml  build.rs  test.pkl
wrapper/rpc/src/: config.rs  fmi2_proto.rs  lib.rs  main.rs  protobuf_compatability.rs  socket_dispatcher.rs
wrapper/rpc/tests/: slave.rs  test.rs
wrapper/src/: fmi2.rs  google_rpc.rs  lib.rs  lib3.rs  master.rs  protobuf_compatability.rs  rpc.rs  schema.proto  schemaless_rpc.rs  serialization.rs  slave.rs
wrapper/tests/: integration_tests.rs  test.rs
wrapper/wrapper-tests/: Cargo.toml
wrapper/wrapper-tests/tests/: integration_tests.rs
(+217 files in other folders)
