[package]
name = "wrapper"
version = "0.1.0"
authors = ["Christian Legaard <clegaard@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[features]
vendored-zmq = ['zmq/vendored']
default=["vendored-zmq"]

[dependencies]
subprocess = "*"
libc = "*"
zmq = "*"
serde = {version = "*", features = ["derive"]}
serde-pickle = "*"
toml = "0.5"
serde_json = "*"
num_enum = "*"
anyhow = "*"
url = "*"
easy_ffi = "*"
lazy_static = "*"
once_cell = "*"