[package]
name = "unifmu"
version = "0.1.0"
authors = ["Christian Legaard <clegaard@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib","cdylib"]

[features]
vendored-zmq = ['zmq/vendored']
default=["vendored-zmq"]

[dependencies]
subprocess = "*"
libc = "*"
zmq = "0.9.2"
serde = {version = "*", features = ["derive"]}
serde-pickle = "*"
toml = "0.5"
serde_json = "*"
serde_repr = "*"
num_enum = "*"
anyhow = "*"
url = "*"
easy_ffi = "*"
lazy_static = "*"
once_cell = "*"

# ------------------ profiling ---------------------------
# CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_RUNNER="valgrind --tool=memcheck --leak-check=full --suppressions=./valgrind.supp"

# CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_RUNNER="pref --call-graph dwarf"
