[package]
authors = ["Christian Legaard <clegaard@outlook.com>"]
edition = "2021"
name = "unifmu"
version = "0.0.8"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
dlopen = "*"
dlopen_derive = "*"
env_logger = "*"
fs_extra = "*"
lazy_static = "*"
libc = "*"
log = "*"
num_enum = "*"
rust-embed = "6.0.0"
tempfile = "*"
url = "*"
walkdir = "*"
zip = { version = "*", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
