[package]
edition = "2021"
name = "fmiapi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bytes = "*"
colored = "3.0.0"
libc = "*"
num_enum = "*"
prost = "*"
serde = {version = "1.0.127", features = ["derive"]}
subprocess = "*"
tokio = {version = "*", features = ["rt"]}
toml = "*"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["registry", "std"]}
url = "*"
zeromq = {git = "https://github.com/zeromq/zmq.rs.git", default-features = false, features = [
  "tokio-runtime",
  "tcp-transport",
]}

[build-dependencies]
prost-build = "0.8.0"
