[package]
edition = "2021"
name = "fmiapi"
version = "0.11.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bytes = "1"
colored = "3"
libc = "0.2"
num_enum = "0.7"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
subprocess = "0.2"
tokio = { version = "1", features = ["rt"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
zeromq = { version = "0.4", default-features = false, features = ["tokio-runtime", "tcp-transport"] }

[build-dependencies]
prost-build = "0.13"
