[package]
name = "integration-tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fmi2api = { path = "../fmi2api" }
unifmu = { path = "../cli" }
safer-ffi = "*"
libc = "*"
tempfile = "*"
url = "*"
