[package]
authors = ["Christian Legaard <clegaard@outlook.com>"]
edition = "2018"
name = "unifmu"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["vendored-zmq"]
vendored-zmq = ['zmq/vendored']

[dependencies]
anyhow = "*"
dlopen = "*"
dlopen_derive = "*"
easy_ffi = "*"
lazy_static = "*"
libc = "*"
num_enum = "*"
once_cell = "*"
serde = {version = "*", features = ["derive"]}
serde-pickle = "*"
serde_bytes = "*"
serde_json = "*"
serde_repr = "*"
subprocess = "*"
toml = "0.5"
url = "*"
zmq = "0.9.2"

[patch.crates-io]
lazy_static = {git = "https://github.com/rust-fuzz/resettable-lazy-static.rs"}

# ------------------ profiling ---------------------------
# CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_RUNNER="valgrind --tool=memcheck --leak-check=full --suppressions=./valgrind.supp"

# CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_RUNNER="pref --call-graph dwarf"
