[package]
authors = ["Christian Legaard <clegaard@outlook.com>"]
edition = "2018"
name = "unifmu"
version = "0.1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["vendored-zmq"]
vendored-zmq = ['zmq/vendored']

[dependencies]
lazy_static = "*"
libc = "*"
num_enum = "*"
prost = "0.7"
safer-ffi = {version = "*", features = ["proc_macros"]}
serde = {version = "*", features = ["derive"]}
serde-pickle = "*"
serde_bytes = "*"
serde_json = "*"
serde_repr = "*"
subprocess = "*"
tokio = {version = "*", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
toml = "0.5"
tonic = "0.4"
url = "*"
zmq = "0.9.2"
port_scanner = "*"

[build-dependencies]
tonic-build = "0.4"

# ------------------ profiling ---------------------------
# CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_RUNNER="valgrind --tool=memcheck --leak-check=full --suppressions=./valgrind.supp"

# CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_RUNNER="pref --call-graph dwarf"
