[package]
name = "fmi2api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rpc = { path = "../rpc" }
common = { path = "../common" }
safer-ffi = { version = "*", features = ["proc_macros"] }
url = "*"
num_enum = "*"
libc = "*"

serde = { version = "*", features = ["derive"] }
toml = "*"
subprocess = "*"
