[package]
name = "fmi2api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
rpc = { path = "../rpc" }
common = { path = "../common" }
safer-ffi = { version = "*", features = ["proc_macros"] }
url = "*"
num_enum = "*"
libc = "*"


serde = { version = "1.0.127", features = ["derive"] }
serde_json = "*"
toml = "*"
subprocess = "*"
quick-xml = { version = "*", features = ["serialize"] }
